@@ -2,7 +2,7 @@ begin
   require 'rspec/core/rake_task'
 
   desc "Run RSpec"
-  Rspec::Core::RakeTask.new do |t|
+  RSpec::Core::RakeTask.new do |t|
     t.rcov = ENV['RCOV']
     t.rcov_opts = %w{--exclude osx\/objc,gems\/,spec\/}
     t.verbose = true
