@@ -41,6 +41,24 @@ module Cucumber
         @step_definitions = []
         RbDsl.rb_language = self
         @world_proc = @world_modules = nil
+        enable_rspec_expectations_if_available
+      end
+
+      def enable_rspec_expectations_if_available
+        begin
+          # RSpec >=2.0
+          require 'rspec/expectations'
+          @rspec_matchers = ::RSpec::Matchers
+        rescue LoadError => try_rspec_1_2_4_or_higher
+          begin
+            require 'spec/expectations'
+            require 'spec/runner/differs/default'
+            Spec::Expectations.differ = Spec::Expectations::Differs::Default.new(options)
+            @rspec_matchers = ::Spec::Matchers
+          rescue LoadError => give_up
+            @rspec_matchers = Module.new{}
+          end
+        end
       end
 
       # Gets called for each file under features (or whatever is overridden
@@ -145,11 +163,7 @@ module Cucumber
 
       def extend_world
         @current_world.extend(RbWorld)
-        if defined?(::RSpec::Matchers) # RSpec. 2.x
-          @current_world.extend(::Rspec::Matchers)
-        elsif defined?(::Spec::Matchers) # RSpec 1.x
-          @current_world.extend(::Spec::Matchers)
-        end
+        @current_world.extend(@rspec_matchers)
         (@world_modules || []).each do |mod|
           @current_world.extend(mod)
         end
