@@ -7,7 +7,7 @@ require 'rubygems'
 begin
   require 'rspec'
   require 'rspec/autorun'
-  Rspec.configure do |c|
+  RSpec.configure do |c|
     c.color_enabled = true
     c.before(:each) do
       ::Term::ANSIColor.coloring = true
